# covid-thailand

./: README.md  pyproject.toml
data/: thailand.csv
notebooks/: thailand.ipynb
