[tool.poetry]
name = "covid-thailand"
version = "0.1.0"
description = "Coronavirus observations in Thailand"
authors = ["Jukka Aho <ahojukka5@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.2.0"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
numpy = "^1.19.4"
scipy = "^1.6.0"
jupyter_nbextensions_configurator = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
